@@ -88,6 +88,7 @@ Stack memory ideal for handling short-lived, method-scoped data.
     * Primitive values (e.g., int, double, boolean)
     * Object references: pointers to objects that live in the heap
     * Method parameters: values passed in when the method is called
+    * Intermediate results
     * Operand stack
 
 Once a method completes execution, its associated stack frame is removed automatically.
@@ -95,5 +96,81 @@ Each thread’s stack is limited in size, which can be configured using the ```-
 
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ## Method Area
+
+Method area is a logical part of the Heap memory and is created when the JVM starts.
+Method area is used to store class-level information such as class structures, Method bytecode, Static variables, Constant pool, Interfaces.
+Static variables in Java are stored in the Method Area.
+This area is logically defined by the JVM Specification and is shared among all threads.
+When a class or interface is loaded by the JVM, its definition is parsed 
+
+    * Class structure metadata, including class names, superclasses, implemented interfaces, and modifiers (public, final, etc.)
+    * Runtime constant pool, which contains literal values and symbolic references used by the class
+    * Static variables, which are class-level variables shared across all instances
+    * Field and method information, including method signatures, access modifiers, and bytecode instructions
+    * Constructor code, including initialization routines for object creation
+    * Type information used for method resolution and dispatching
+
+### PermGen (Before Java 8):
+
+Prior to Java 8, method area was physically implemented in a fixed-size memory region called the Permanent Generation (PermGen). 
+PermGen resided in the heap and had to be explicitly sized using JVM flags :
+
+```
+-XX:PermSize=128m
+-XX:MaxPermSize=256m
+```
+
+### MetaSpace (Java 8 and Later):
+
+From Java 8 onwards, PermGen has been replaced with MetaSpace, Unlike PermGen, Metaspace is not part of the Java heap.
+However, while Metaspace can grow automatically, it is still constrained by available system memory. If too many classes are loaded (or not properly unloaded), Metaspace can still overflow, leading to error.
+
+To control Metaspace usage, the JVM provides the following flags
+
+```
+-XX:MetaspaceSize=128m
+-XX:MaxMetaspaceSize=512m
+```
+Metaspace memory is eligible for collection when classes are unloaded.
+
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+## Program Counter (PC)
+
+Each JVM thread has a Program Counter (PC) register. It plays a critical role in tracking the flow of execution for Java applications. 
+While other memory areas like the heap and stack handle data and objects, the PC register is concerned with instruction-level control: keeping track of which bytecode instruction a thread should execute next.
+
+The Program Counter register contains the address of the next instruction to be executed in the current thread’s method. This allows the JVM to resume execution from the correct point after:
+
+    * A method call
+    * A branch (e.g., if/else, loop)
+    * An exception handler
+    * A thread context switch
+
+Internally, the PC register helps drive the JVM execution engine, which fetches the bytecode instruction pointed to by the PC, decodes it, and then executes it. 
+After execution, the PC is updated to point to the next instruction, ensuring continuous and correct program flow.
+
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+## Native Method Stack
+
+This memory is allocated for each thread when it is created and can have either a fixed or dynamic size. Native method stack is also known as C stack.
+It is the dedicated memory region which supports the execution of the methods written in languages other than Java, such as C or C++. 
+These methods are typically called through the Java Native Interface (JNI), which acts as a bridge between the JVM and native libraries.
+When a native method is invoked, the JVM hands control over to the host operating system, which executes the method using the machine’s native call stack rather than the Java call stack.
+
+Unlike the Java stack, which stores local variables, object references, and intermediate results for Java methods, the native method stack deals with:
+
+    * Native language function calls
+    * Operating system-level data structures
+    * Registers and pointers specific to compiled native code.
+
+The JVM doesn’t manage the internals of this stack in the same way it manages Java method execution. Instead, it delegates the execution entirely to the native system runtime, allowing native code to execute as if it were part of a regular C/C++ program.
+
+The JVM provides a built-in feature to monitor native memory consumption with:
+
+```
+-XX:NativeMemoryTracking=summary -XX:+UnlockDiagnosticVMOptions
+```
+
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 
